# LLMs_for_Agentic_ZeroShot_ASR

./: .gitignore  config.py  pyproject.toml  requirements.txt  slurm_baselines.sh
jobs/: asr_agent.sh  asr_agent2.sh  qwen_agent.sh
jobs/logs/: asr_agent_2174595.err  (+3 more)
logs/: asr_agent_2169551.err  asr_agent_2169551.out  asr_agent_2169746.err  asr_agent_2169746.out  asr_agent_2169810.err  asr_agent_2169810.out  asr_agent_2172340.err  asr_agent_2172340.out  asr_agent_2172351.err  asr_agent_2172351.out  asr_agent_2172541.err  asr_agent_2172541.out  asr_agent_2173445.err  asr_agent_2173445.out  asr_agent_2174596.err  asr_agent_2174596.out  asr_agent_2174615.err  asr_agent_2174615.out  asr_agent_2174616.err  asr_agent_2174616.out  asr_agent_2174617.err  asr_agent_2174617.out  asr_agent_2174618.err  asr_agent_2174618.out  asr_agent_2177017.err  asr_agent_2177017.out  asr_agent_2177047.err  asr_agent_2177047.out  asr_agent_2192690.err  asr_agent_2192690.out  asr_agent_2192897.err  asr_agent_2192897.out  asr_agent_2192960.err  asr_agent_2192960.out  asr_agent_2193302.err  asr_agent_2193302.out  asr_agent_2194549.err  asr_agent_2194549.out  asr_agent_2194556.err  asr_agent_2194556.out  (+85 more)
main/: about_panlex.py  asr_mms_1b_baseline_with_lang.py  asr_mms_zeroshot.py  asr_mms_zeroshot_baseline.py  asr_omni_baseline.py  asr_whisper_baseline.py  audio_loader.py  collect_words.py  compare_baselines.py  eval_engine.py  orchestrator.py  process_audio.py  romanize_transcriptions_with_uroman.py  test_all_models.py
uroman/: how-to-release.md  pyproject.toml  requirements.txt  uroman.ipynb
(+72 files in other folders)
