[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets[audio]>=4.4.2",
    "editdistance>=0.8.0",
    "flashlight-text>=0.0.7",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.0",
    "jiwer>=4.0.0",
    "jupyter>=1.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.0",
    "numpy>=1.26.0",
    "omnilingual-asr>=0.2.0",
    "openai-whisper>=20250625",
    "pandas>=2.3.0",
    "pyffmpeg>=2.5.2.3.1",
    "python-dotenv>=1.0.0",
    "python-levenshtein>=0.27.3",
    "pyyaml>=6.0",
    "regex>=2025.11.3",
    "sacrebleu>=2.5.0",
    "seaborn>=0.13.0",
    "soundfile>=0.13.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchmetrics>=1.8.0",
    "tqdm>=4.66.0",
    "transformers>=4.57.0",
    "uroman>=1.3.1.1",
]
